static-website/static-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: static-website
  name: static-website
  namespace: static-website
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: static-website
  type: ClusterIP
status:
  loadBalancer: {}
