static-website/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-web-ingress
  namespace: static-website
  annotations:
    # This tells Google Cloud to create an External Load Balancer to realize this Ingress
    kubernetes.io/ingress.class: gce
    # This enables HTTP connections from Internet clients
    kubernetes.io/ingress.allow-http: "true"
    # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
    kubernetes.io/ingress.global-static-ip-name: web-ip
    cert-manager.io/issuer: letsencrypt-staging
spec:
  rules:
  - host: 51-158-57-178.lb.fr-par.scw.cloud
    http:
      paths:
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: static-website
            port:
              number: 80
