static-website/static-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-ingress
  namespace: static-website
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: potta.kumar.bupd.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-website
            port:
              number: 80
---
